<resources>
    <string name="app_name">Calculadora de Notas</string>
    <string name="calcular">Calcular</string>
    <string name="calculadora_de_notas">Calculadora de Notas</string>
    <string name="digite_a_qtd_de_faltas">Digite a qtd de faltas</string>
    <string name="nota_4">Nota 4</string>
    <string name="nota_3">Nota 3</string>
    <string name="nota_2">Nota 2</string>
    <string name="nota_1">Nota 1</string>
</resources>